add_executable(const1 const1.cpp)
add_executable(struct1 struct1.cpp)
add_executable(struct2 struct2.cpp)
add_executable(struct3 struct3.cpp)
add_executable(flow1 flow1.cpp)
add_executable(flow2 flow2.cpp)
add_executable(init1 init1.cpp)
add_executable(init2 init2.cpp)
add_executable(init3 init3.cpp)
add_executable(lambda1 lambda1.cpp)
add_executable(lambda2 lambda2.cpp)
add_executable(cast1 cast1.cpp)
add_executable(order1 order1.cpp)
add_executable(order2 order2.cpp)
add_executable(call1 call1.cpp)
add_executable(call2 call2.cpp)
add_executable(call3 call3.cpp)
add_executable(funky1 funky1.cpp)
add_executable(funky2 funky2.cpp)
